# BNO055-Driver

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: bno055_params.yaml
include/bno055_driver/: bno055_i2c.hpp  bno055_node.hpp
launch/: bno055.launch.py
src/: bno055_i2c.cpp  bno055_node.cpp  main.cpp
