<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bno055_driver</name>
  <version>1.0.0</version>
  <description>
    ROS2 Jazzy C++ driver for the Bosch BNO055 9-axis IMU over I2C.
    Publishes sensor_msgs/Imu with fused orientation (quaternion),
    angular velocity, and linear acceleration for EKF and SLAM integration.
    Designed for Raspberry Pi 4 Model B.
  </description>
  <maintainer email="Antonyjuza@gmail.com">Juza</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
